# get-in-the

./: .gitignore  README.md  Unsaved Document 1  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: getinthe.json.backup  getinthe.md
.github/commands/: analyze_layout.py  kitchen.py  kitchen_new.py  kitchen_v2.py  milestone.py
.github/prompts/: @getinthe.md
docker/: .dockerignore  Dockerfile  README.md  docker-compose.yml  run.sh
docs/: cabinet-standards.md
docs/robots/: kitchen_layout_spec.md  update_summary.md
output/: kitchen_PROPORTIONAL_v2.txt  kitchen_REFERENCE.txt  kitchen_layout.txt
output/versions/: kitchen_layout_stove_on_S1_20260205_092434.txt  kitchen_layout_stove_on_S1_20260205_092837.txt  kitchen_layout_stove_on_S1_20260205_092849.txt  kitchen_layout_stove_on_W3_20260205_092837.txt  kitchen_layout_stove_on_W3_20260205_092849.txt
scripts/: kitchen_layout_generator.py
scripts/config/: kitchen_analysis.json  kitchen_layout_simple.json  kitchen_measurements.json
scripts/engine/: cabinet_renderer.py  kitchen_scale_converter.py  layout_scaling_engine.py  sequential_layout.py  svg_renderer.py  svg_renderer.py.backup  validate_layout.py
