[tool.poetry]
name = "get-in-the"
version = "2.0.0"
description = "Kitchen layout and design project with ASCII visualization and measurement tracking"
authors = ["Dominick"]
readme = "README.md"
packages = [{include = "scripts"}]

[tool.poetry.dependencies]
python = "^3.12"
svgwrite = "^1.4.3"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
